--- a/backend/package.json
+++ b/backend/package.json
@@ -1,17 +1,18 @@
 {
   "name": "samartai-backend",
   "version": "1.0.0",
-  "description": "Backend for SamartAI",
   "main": "server.js",
+  "type": "module",
   "scripts": {
     "start": "node server.js"
   },
   "dependencies": {
+    "axios": "^1.6.0",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "@google/generative-ai": "^0.21.0"
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "node-fetch": "^3.3.2",
+    "@google/generative-ai": "^0.21.0",
     "@upstash/redis": "^1.31.0"
-
   }
 }
